<resources>
    <string name="app_name">SmartCity</string>
    <string name="Reseau">Debut Reseau</string>
    <string name="Confirmer">Confirmer</string>
    <string name="ajouterUnReseau">+</string>
    <string name="partieActualites">Actualités</string>
    <string name="meteo">Météo</string>
    <string name="alarme">Alarme</string>
    <string name="actualite">Actualités</string>
    <string name="etattrafic">Etat Trafic</string>
    <string name="agenda">Agenda</string>
    <string name="change_city">Changer la ville</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="ville_not_found">Ville non existante, veuillez la resaisir !</string>
    <string name="place_not_found">Désolé ! La météo n\'a pas été trouvée !</string>
    <string name="data_not_found">Désolé ! Les informations n\'ont pas pu être récupérées !</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="partieConnexion">ConnexApp</string>
    <string name="pseudo">Pseudo</string>
    <string name="password">Mot de passe</string>
    <string name="connecte"></string>
    <string name="resterCo">Rester connecté</string>
    <string name="dateNaissance">Date de Naissance (JJ MM AAAA)</string>
    <string name="taille">Taille (en cm)</string>
    <string name="poids">Poids (en kg)</string>
    <string name="sexe">Sexe</string>
    <string name="pas_de_message">Aucun messages dans cette conversation !</string>
    <string name="pas_de_reseau">Aucun réseaux adhéré !</string>

    <string name="pas_de_commerce">Aucun commerce !</string>
    <string name="erreur">Erreur</string>
    <string name="setting">Options</string>

    <string name="ajoutFavori">Ajouter en favori</string>
    <string name="supprimerFavori">Supprimer des favoris</string>
    <string name="favori">Commerces favoris</string>
    <string name="commerces_favoris">Liste des commerces favoris</string>
    <string name="commerceAjouteFavori">Commerce ajouté aux favoris</string>
    <string name="commerceSupprimeFavori">Commerce supprimé des favoris</string>
    <string name="noAnnonces">Pas d\'annonces !</string>
    <string name="voirCommerce">Voir le commerce</string>
    <string name="voirOffresCommerce">Voir les offres du commerce</string>
    <string name="info_commerce">INFO COMMERCE</string>
    <string name="voirMap">Voir sur la map</string>
    <string-array name="choixFiltreAnnonce">
        <item>Toutes les annonces</item>
        <item>Annonces selon préférences</item>
        <item>Annonces des commerces favoris</item>
    </string-array>

    <string name="presentationCommerce">Cette publicite vous est proposée par : </string>


    <string name="rechercheProximite">Recherche par proximité</string>
    <string name="rechercheAlphabetique">Recherche par ordre alphabétique</string>
    <string name="par_proximite">Proximite</string>
    <string name="par_ordre_alphabetique">Ordre alphabétique</string>


    <!--____________Demande adhesion activity ______________-->

    <string name="demandeAdhesion_AdminReseau">Admin du réseau : </string>
    <string name="demandeAdhesion_NomReseau">Nom du réseau :</string>
    <string name="demandeAdhesion_DescriptionReseau">Description du réseau</string>
    <string name="DemandeAdhesionBouton">S\'inscrire</string>
    <string name="Filtres">Filtres</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="listeReseauUtilisateurAjout">Créer</string>
    <string name="listeReseauUtilisateurRechercher">Rechercher</string>
    <string name="listeReseauUtilisateurTexte">Liste de mes réseaux</string>
    <string name="rechercheVide">Veuillez remplir la recherche</string>
    <string name="aucunReseauCorrespondant">Aucun réseau correspondant !</string>
    <string name="ok">OK</string>
    <string name="texteRecherche">Recherche</string>
    <string name="mesInvitations">Mes Invitations</string>
    <string name="accepter">Accepter</string>
    <string name="refuser">Refuser</string>
    <string name="aucuneInvitation">Aucune invitation</string>
    <string name="listeReseauUtilisateurMesInvitations">Mes Invitations</string>
    <string name="listeReseauUtilisateurMesReseaux">Mes réseaux</string>
    <string name="listeReseauAdmin">Liste des réseaux dont vous êtes Admin</string>
    <string name="pas_de_reseau_admin">Vous n\'êtes pas admin d\'un réseau</string>
    <string name="EnvoyerUneInvit">Envoyer une invitation à :</string>
    <string name="pseudoUtilisateur">Pseudo utilisateur</string>
    <string name="valider">OK</string>
    <string name="pas_d_utilisateur">Vous n\'avez pas entré de nom</string>

    <string name="actualiser">Actualiser</string>
    <string name="desinscription">Se désinscrire</string>
    <string name="login_incorrecte">L\'utilisateur n\'existe pas</string>
    <string name="invitationEnvoyer">Invitation envoyée</string>
    <string name="recherche_directe">Recherche directe</string>
    <string name="rechercheCommerces">Recherche de commerces</string>
    <string name="offresMoment">Offres du moment</string>
    <string name="retourAccueil">Retour accueil</string>
    <string name="invitationAccepter">Invitation accepter</string>
    <string name="invitationRefuser">Invitation refuser</string>


</resources>
