<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChoixPartieCommerceActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/layoutTypeRecherche"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/listeFavoriCommerce"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/favori"
            android:background="@color/partieCommerce"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/rechercheDirecte"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/recherche_directe"
            android:background="@color/partieCommerce"
            android:layout_weight="1"/>


    </LinearLayout>

    <Button
        android:id="@+id/rechercheCommerces"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/rechercheCommerces"
        android:background="@color/partieCommerce"/>

    <Button
        android:id="@+id/annoncesCommerces"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/offresMoment"
        android:background="@color/partieCommerce"/>
</LinearLayout>