<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="losamigos.smartcity.InscriptionActivity">

    <TextView
        android:id="@+id/pseudo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:text="@string/pseudo"/>

    <EditText
        android:id="@+id/pseudoInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:text="@string/password"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/dateNaissance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:text="@string/dateNaissance"/>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/day"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/day"
        />
    <EditText
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/month" />
    </android.support.v7.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/sexe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:text="@string/sexe"/>

    <RadioGroup
        android:id = "@+id/groupe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/femme"
            android:text="Femme"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/homme"
            android:text="Homme"/>
    </RadioGroup>

    <TextView
        android:id="@+id/taille"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:text="@string/taille"/>
    <EditText
        android:id="@+id/tailleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/poids"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:text="@string/poids"/>

    <EditText
        android:id="@+id/poidsInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/inscrbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Suite"
        />



</LinearLayout>
