<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="losamigos.smartcity.MainActivity">
    <TextView
        android:id="@+id/titre"
        android:text="SmartCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="35dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/connexion"
        android:text="Connectez-vous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/pseudo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:text="@string/pseudo"/>

    <EditText
        android:id="@+id/pseudoInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:text="@string/password"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/resterCo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/resterConnecter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       />

    </LinearLayout>
    <Button
        android:id="@+id/okbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Connexion"
        />
    <TextView
        android:id="@+id/inscription"
        android:text="Première utilisation, Inscrivez-vous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/inscriptionbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Inscription"
        />

    <TextView
        android:id="@+id/connecte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/connecte"/>


</LinearLayout>