<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PreferencesActivity">
    <TextView
        android:id="@+id/titrePreferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="35dp"
        android:textStyle="bold"
        android:text="Modifier les paramètres"/>
    <TextView
        android:id="@+id/password"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:text="@string/password"/>

    <EditText
        android:id="@+id/passwordModifie"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/taille"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:text="@string/taille"/>

    <EditText
        android:id="@+id/tailleModifie"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/poids"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:text="@string/poids"/>

    <EditText
        android:id="@+id/poidsModifie"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/dateNaissance"
        android:layout_width="fill_parent"

        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/dateNaissance"/>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/dayModifie"
            android:inputType="number"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:maxLength="2"
            />
        <EditText
            android:id="@+id/monthModifie"
            android:inputType="number"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/day"
            android:layout_marginRight="15dp"
            android:maxLength="2"
            />
        <EditText
            android:id="@+id/yearModifie"
            android:inputType="number"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/month"
            android:maxLength="4"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/sexeModifie"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:text="@string/sexe"/>

    <RadioGroup
        android:id = "@+id/groupeModifie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/femmeModifie"
            android:text="Femme"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hommeModifie"
            android:text="Homme"/>
    </RadioGroup>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
    <Button
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/Modifiebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Modifier"
        />
    <Button
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/affinerThemes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Affiner ses thèmes"
        />
    </android.support.v7.widget.LinearLayoutCompat>

</LinearLayout>